--- a/.gitignore
+++ b/.gitignore
@@ -325,3 +325,5 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/python,django,vscode,pycharm
 
 my_settings.py
+db_uploader.py
+*.csv
