회원가입/로그인 리뷰사항 반영본 입니다

--- a/.gitignore
+++ b/.gitignore
@@ -325,3 +325,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/python,django,vscode,pycharm
 
 my_settings.py
+.DS_Store
