--- a/.gitignore
+++ b/.gitignore
@@ -325,4 +325,6 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/python,django,vscode,pycharm
 
 my_settings.py
+*.csv
+db_uploader.py
 .DS_Store
